--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,15 @@
   padding: 0;
 }
 
+html, body, .wrapper {
+  height: 100%;
+}
+
 footer {
-  padding-bottom: 0;
+  position: absolute;
+  margin-top: -50px;
+  height: 50px;
+  clear: both;
 }
 
 .wrapper {
