--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ html, body, .wrapper {
 
 footer {
   position: absolute;
-  margin-top: -50px;
-  height: 50px;
-  clear: both;
+  bottom: 0;
+  background-color: #101010;
+  height: 45px;
+  width: 100%;
 }
 
 .wrapper {
   padding-top: 40px;
-  padding-bottom: 40px;
 }
 
 .copyright {
